--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 				</div>
 				<button class="profile__add-button"></button>
 			</section>
-			<section class="elements center" aria-label="h2">
-				<ul class="elements__list">
+			<section class="center" aria-label="h2">
+				<ul class="elements">
 					<li class="elements__item">
 						<figure class="elements__element">
 							<img class="elements__image" src="./images/dagestan.jpg" alt="Дагестан">
@@ -84,7 +84,6 @@
 			</section>
 		</main>
 		<footer class="footer center">&#169; 2020 Mesto Russia</footer>
-
 		<div class="popup">
 			<div class="popup__container">
 				<form class="popup__edit center">
