--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
       <div class="popup__container">
         <form class="popup__edit center" name="popup" method="post">
           <h3 class="popup__heading">Редактировать профиль</h3>
-          <input type="text" name="name" class="popup__input popup__input_type_name">
-          <input type="text" name="about" class="popup__input popup__input_type_job">
+          <input type="text" name="name" class="popup__input popup__input_type_name" placeholder="Жак-Ив Кусто">
+          <input type="text" name="about" class="popup__input popup__input_type_job" placeholder="Исследователь океана">
           <button class="popup__save" type="submit">Сохранить</button>
         </form>
         <button class="popup__close" type="button"></button>
