--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <ul class="elements">
           <template id="elements">
             <li class="elements__element">
-              <img class="elements__image" src="" alt="">
+              <img class="elements__image" src="#" alt="">
               <button class="elements__trash" type="button"></button>
               <div class="elements__info">
                 <h2 class="elements__caption hide-text"></h2>
@@ -70,13 +70,14 @@
 
     <div class="popup popup_type_image">
       <div class="popup__container">
-        <img src="" alt="Москва" class="popup__opened-image"></img>
+        <img class="popup__opened-image" src="#" alt="#">
         <p class="popup__opened-title"></p>
         <button class="popup__close popup__close_type_image" type="button"></button>
       </div>
 
     </div>
     <script src="./scripts/script.js"></script>
+  </div>
 </body>
 
 </html>
