--- a/index.html
+++ b/index.html
@@ -46,11 +46,13 @@
 
     <div class="popup popup_type_edit">
       <div class="popup__container">
-        <form class="popup__edit popup__edit_type_edit center" name="popup" method="post">
+        <form class="popup__edit popup__edit_type_edit center" name="popup" method="post" novalidate>
           <h3 class="popup__heading">Редактировать профиль</h3>
-          <input type="text" name="name" class="popup__input popup__input_type_name" placeholder="Имя">
-          <input type="text" name="about" class="popup__input popup__input_type_job" placeholder="О себе">
-          <button class="popup__save" type="submit">Сохранить</button>
+          <input type="text" name="name" id="name-input" class="popup__input popup__input_type_name" placeholder="Имя" minlength="2" maxlength="40" required>
+          <span class="popup__input-error name-input-error"></span>
+          <input type="text" name="about" id="about-input" class="popup__input popup__input_type_job" placeholder="О себе" minlength="2" maxlength="200" required>
+          <span class="popup__input-error about-input-error"></span>
+          <button class="popup__save popup__save_type_inactive button_inactive" type="submit">Сохранить</button>
         </form>
         <button class="popup__close popup__close_type_edit" type="button"></button>
       </div>
@@ -58,11 +60,13 @@
 
     <div class="popup popup_type_add">
       <div class="popup__container">
-        <form class="popup__edit popup__edit_type_add center" name="popup" method="post">
+        <form class="popup__edit popup__edit_type_add center" name="popup" method="post" novalidate>
           <h3 class="popup__heading">Новое место</h3>
-          <input type="text" name="name" class="popup__input popup__input_type_title" placeholder="Название">
-          <input type="text" name="about" class="popup__input popup__input_type_link" placeholder="Ссылка на картинку">
-          <button class="popup__save" type="submit">Создать</button>
+          <input type="text" name="name" id="heading-input" class="popup__input popup__input_type_title" placeholder="Название" minlength="2" maxlength="30" required>
+          <span class="popup__input-error heading-input-error"></span>
+          <input type="url" name="about" id="link-input" class="popup__input popup__input_type_link" placeholder="Ссылка на картинку" required>
+          <span class="popup__input-error link-input-error"></span>
+          <button class="popup__save popup__save_type_inactive button_inactive" type="submit">Создать</button>
         </form>
         <button class="popup__close popup__close_type_add" type="button"></button>
       </div>
