--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
           <input type="url" name="about" id="link-input" class="popup__input popup__input_type_link"
             placeholder="Ссылка на картинку" required>
           <span class="popup__input-error link-input-error"></span>
-          <button class="popup__save popup__save_type_inactive" type="submit">Создать</button>
+          <button class="popup__save popup__save_type_inactive popup__save_type_add" type="submit">Создать</button>
         </form>
         <button class="popup__close popup__close_type_add" type="button"></button>
       </div>
