--- a/index.html
+++ b/index.html
@@ -84,8 +84,7 @@
       </div>
 
     </div>
-    <script src="./scripts/script.js"></script>
-    <script src="./scripts/validate.js"></script>
+    <script type="module" src="./scripts/index.js"></script>
   </div>
 </body>
 
