refactoring all without webpack

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       </section>
       <section class="center" aria-label="h2">
         <ul class="elements">
-          <template id="elements">
+          <template id="elements" class="element-template">
             <li class="elements__element">
               <img class="elements__image" src="#" alt="">
               <button class="elements__trash" type="button"></button>
