--- a/src/index.html
+++ b/src/index.html
@@ -12,11 +12,11 @@
 <body class="root">
   <div class="page center">
     <header class="header center">
-      <img class="header__logo" src="<%=require(./images/logo.svg)%>" alt="Место">
+      <img class="header__logo" src="<%=require('./images/logo.svg')%>" alt="Место">
     </header>
     <main class="content center">
       <section class="profile center">
-        <img src="<%=require(./images/__avatar.jpg)%>" alt="Аватар" class="profile__avatar">
+        <img src="<%=require('./images/__avatar.jpg')%>" alt="Аватар" class="profile__avatar">
         <div class="profile__info">
           <h1 class="profile__title hide-text">Жак-Ив Кусто</h1>
           <button class="profile__edit-button" type="button"></button>
