--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,7 @@
     <main class="content center">
       <section class="profile center">
         <img src="<%=require('./images/__avatar.jpg')%>" alt="Аватар" class="profile__avatar">
+        <div class="profile__edit-avatar"></div>
         <div class="profile__info">
           <h1 class="profile__title hide-text">Жак-Ив Кусто</h1>
           <button class="profile__edit-button" type="button"></button>
@@ -31,7 +32,11 @@
               <button class="elements__trash" type="button"></button>
               <div class="elements__info">
                 <h2 class="elements__caption hide-text"></h2>
-                <button class="elements__like-button" type="button"></button>
+                <div class="elements__like-section">
+                  <button class="elements__like-button" type="button"></button>
+                  <p class="elements__like-counter">012</p>
+                </div>
+                
               </div>
             </li>
           </template>
@@ -81,8 +86,35 @@
         <p class="popup__opened-title"></p>
         <button class="popup__close popup__close_type_image" type="button"></button>
       </div>
-
     </div>
+
+    <div class="popup popup_type_update-avatar popup_opened">  <!-- popup_opened -->
+      <div class="popup__container">
+        <form class="popup__edit center" name="popup" method="post" novalidate>
+          <h3 class="popup__heading">Обновить аватар</h3>
+          <input type="url" name="about" id="link-input" class="popup__input popup__input_type_link"
+            placeholder="Ссылка на изображение" required>
+          <span class="popup__input-error link-input-error"></span>
+          
+          <button class="popup__save popup__save_type_inactive" type="submit">Сохранить</button>
+        </form>
+        <button class="popup__close popup__close_type_edit" type="button"></button>
+      </div>
+    </div>
+
+
+    <div class="popup popup_type_delete-photo">  <!-- popup_opened -->
+      <div class="popup__container">
+        <form class="popup__edit center">
+          <h3 class="popup__heading">Вы уверены?</h3>  
+          <button class="popup__save" type="reset">Да</button>
+        </form>
+        <button class="popup__close popup__close_type_edit" type="button"></button>
+      </div>
+    </div>
+
+
+
   </div>
 </body>
 
