--- a/src/index.html
+++ b/src/index.html
@@ -88,7 +88,7 @@
       </div>
     </div>
 
-    <div class="popup popup_type_update-avatar popup_opened">  <!-- popup_opened -->
+    <div class="popup popup_type_update-avatar">  <!-- popup_opened -->
       <div class="popup__container">
         <form class="popup__edit center" name="popup" method="post" novalidate>
           <h3 class="popup__heading">Обновить аватар</h3>
