--- a/src/index.html
+++ b/src/index.html
@@ -15,14 +15,16 @@
     </header>
     <main class="content center">
       <section class="profile center">
-        <img src="<%=require('./images/__avatar.jpg')%>" alt="Аватар" class="profile__avatar">
+        <img src="#" alt="Аватар" class="profile__avatar">
+        <!-- <img src="<%=require('./images/__avatar.jpg')%>" alt="Аватар" class="profile__avatar"> -->
+
         <div class="profile__edit-avatar"></div>
         <div class="profile__info">
-          <h1 class="profile__title hide-text">Жак-Ив Кусто</h1>
+          <h1 class="profile__title hide-text"></h1>
           <button class="profile__edit-button" type="button"></button>
-          <p class="profile__subtitle hide-text">Исследователь океана</p>
+          <p class="profile__subtitle hide-text"></p>
         </div>
-        <button class="profile__add-button" type="button"></button>
+        <button class="profile__add-button" type="button" id="add-button"></button>
       </section>
       <section class="center" aria-label="h2">
         <ul class="elements">
@@ -34,7 +36,7 @@
                 <h2 class="elements__caption hide-text"></h2>
                 <div class="elements__like-section">
                   <button class="elements__like-button" type="button"></button>
-                  <p class="elements__like-counter">012</p>
+                  <span class="elements__like-counter">0</span>
                 </div>
                 
               </div>
@@ -90,7 +92,7 @@
 
     <div class="popup popup_type_update-avatar">  <!-- popup_opened -->
       <div class="popup__container">
-        <form class="popup__edit center" name="popup" method="post" novalidate>
+        <form class="popup__edit center" name="popup" method="post" id="update-avatar" novalidate>
           <h3 class="popup__heading">Обновить аватар</h3>
           <input type="url" name="about" id="link-input" class="popup__input popup__input_type_link"
             placeholder="Ссылка на изображение" required>
