--- a/src/index.html
+++ b/src/index.html
@@ -15,9 +15,10 @@
     </header>
     <main class="content center">
       <section class="profile center">
-        <img src="#" alt="Аватар" class="profile__avatar">
-        <!-- <img src="<%=require('./images/__avatar.jpg')%>" alt="Аватар" class="profile__avatar"> -->
-
+        <div class="profile__avatar-container">
+          <img src="#" alt="Аватар" class="profile__avatar">
+          <button type="button" class="profile__avatar-button"></button>
+        </div>
         <div class="profile__edit-avatar"></div>
         <div class="profile__info">
           <h1 class="profile__title hide-text"></h1>
@@ -38,7 +39,7 @@
                   <button class="elements__like-button" type="button"></button>
                   <span class="elements__like-counter">0</span>
                 </div>
-                
+
               </div>
             </li>
           </template>
@@ -90,14 +91,14 @@
       </div>
     </div>
 
-    <div class="popup popup_type_update-avatar">  <!-- popup_opened -->
+    <div class="popup popup_type_update-avatar"> <!-- popup_opened -->
       <div class="popup__container">
         <form class="popup__edit center" name="popup" method="post" id="update-avatar" novalidate>
           <h3 class="popup__heading">Обновить аватар</h3>
           <input type="url" name="about" id="link-input" class="popup__input popup__input_type_link"
             placeholder="Ссылка на изображение" required>
           <span class="popup__input-error link-input-error"></span>
-          
+
           <button class="popup__save popup__save_type_inactive" type="submit">Сохранить</button>
         </form>
         <button class="popup__close popup__close_type_edit" type="button"></button>
@@ -105,10 +106,10 @@
     </div>
 
 
-    <div class="popup popup_type_delete-photo">  <!-- popup_opened -->
+    <div class="popup popup_type_delete-photo"> <!-- popup_opened -->
       <div class="popup__container">
         <form class="popup__edit center">
-          <h3 class="popup__heading">Вы уверены?</h3>  
+          <h3 class="popup__heading">Вы уверены?</h3>
           <button class="popup__save" type="reset">Да</button>
         </form>
         <button class="popup__close popup__close_type_edit" type="button"></button>
