--- a/src/index.html
+++ b/src/index.html
@@ -37,7 +37,7 @@
                 <h2 class="elements__caption hide-text"></h2>
                 <div class="elements__like-section">
                   <button class="elements__like-button" type="button"></button>
-                  <span class="elements__like-counter">0</span>
+                  <span class="elements__like-counter"></span>
                 </div>
 
               </div>
