--- a/src/index.html
+++ b/src/index.html
@@ -93,7 +93,7 @@
 
     <div class="popup popup_type_update-avatar"> <!-- popup_opened -->
       <div class="popup__container">
-        <form class="popup__edit center" name="popup" method="post" id="update-avatar" novalidate>
+        <form class="popup__edit center update-avatar" name="popup" method="post" novalidate>
           <h3 class="popup__heading">Обновить аватар</h3>
           <input type="url" name="about" id="link-input" class="popup__input popup__input_type_link"
             placeholder="Ссылка на изображение" required>
