--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,7 @@
           <button class="profile__edit-button" type="button"></button>
           <p class="profile__subtitle hide-text"></p>
         </div>
-        <button class="profile__add-button" type="button" id="add-button"></button>
+        <button class="profile__add-button profile__type_add-button" type="button"></button>
       </section>
       <section class="center" aria-label="h2">
         <ul class="elements">
@@ -110,7 +110,7 @@
       <div class="popup__container">
         <form class="popup__edit center">
           <h3 class="popup__heading">Вы уверены?</h3>
-          <button class="popup__save" type="reset">Да</button>
+          <button class="popup__save" type="submit">Да</button>
         </form>
         <button class="popup__close popup__close_type_edit" type="button"></button>
       </div>
