--- a/src/index.html
+++ b/src/index.html
@@ -95,9 +95,9 @@
       <div class="popup__container">
         <form class="popup__edit center update-avatar" name="popup" method="post" novalidate>
           <h3 class="popup__heading">Обновить аватар</h3>
-          <input type="url" name="about" id="link-input" class="popup__input popup__input_type_link"
+          <input type="url" name="about" id="avatar-input" class="popup__input popup__input_type_link"
             placeholder="Ссылка на изображение" required>
-          <span class="popup__input-error link-input-error"></span>
+          <span class="popup__input-error avatar-input-error"></span>
 
           <button class="popup__save popup__save_type_inactive" type="submit">Сохранить</button>
         </form>
