--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,7 @@
           <button class="profile__edit-button" type="button"></button>
           <p class="profile__subtitle hide-text"></p>
         </div>
-        <button class="profile__add-button profile__type_add-button" type="button"></button>
+        <button class="profile__add-button profile__type profile__type_add-button" type="button"></button>
       </section>
       <section class="center" aria-label="h2">
         <ul class="elements">
